[tool.poetry]
name = "fastapi-querybuilder"
version = "0.2.1"
description = "Smart filtering, sorting, and searching for FastAPI with SQLAlchemy"
authors = ["Bhadri01 <bhadrinathan28@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/bhadri01/fastapi-querybuilder"
keywords = ["fastapi", "sqlalchemy", "filters", "query", "sort", "search", "pagination", "api", "rest"]
include = ["fastapi_querybuilder/py.typed"]
packages = [{ include = "fastapi_querybuilder" }]

classifiers = [
    "Framework :: FastAPI",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = ">=0.128.8"
uvicorn = ">=0.40.0"
pydantic = ">=2.12.5"
sqlalchemy = ">=2.0.46"
fastapi_pagination = ">=0.15.10"
aiosqlite = ">=0.22.1"
poetry = ">=2.3.2"
orjson = ">=3.11.7"

[tool.coverage.paths]
source = ["fastapi_querybuilder"]

[tool.coverage.run]
source = ["fastapi_querybuilder"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
